Backend/portfoliobackend/k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  labels:
    app: portfolio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      containers:
      - name: portfolio-backend
        image: areebhassan/portfolio-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
