Backend/portfoliobackend/k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
